syntax = "proto3";

package enclave_services;

import "enclave_rpc.proto";

// This file contains messages for special endpoints available from inside the
// enclave via the untrusted_rpc_call OCALL.

// IASProxy endpoint.

message IasGetSpidRequest {
}

message IasGetSpidResponse {
    // 16-byte SPID used by the compute node.
    bytes spid = 1;
}

message IasVerifyQuoteRequest {
    // Quote to verify.
    bytes quote = 1;
    // Nonce.
    bytes nonce = 2;
}

message IasVerifyQuoteResponse {
    // Attestation report from IAS.
    enclave_rpc.AttestationReport report = 1;
}
